# ros2-templates

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cpp_pkg/lib/cpp_pkg/: cpp_executable  cpp_publisher
install/cpp_pkg/share/ament_index/resource_index/parent_prefix_path/: cpp_pkg
install/cpp_pkg/share/cpp_pkg/: package.sh  package.xml
install/py_pkg/lib/py_pkg/: py_node_executable  py_publisher  py_subscriber
install/py_pkg/share/py_pkg/: package.sh  package.xml
log/: latest_build  latest_list
src/cpp_pkg/: CMakeLists.txt  package.xml
src/cpp_pkg/src/: cpp_publisher.cpp  cpp_subscriber.cpp  cpp_template.cpp
src/log/: latest_list
src/py_pkg/: package.xml  setup.py
src/py_pkg/py_pkg/: py_template.py
